--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahsan's Portfolio</title>
+    <link rel="shortcut icon" type="image/jpg" href="./assets/briefcase-solid-24.png"/>
     <link rel="stylesheet" href="./CSS/style.css" />
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
